tests/errors/constant-folding-div-zero.ari
const BAD: i64 = 1 / 0;

fn main() -> i64 {
  return BAD;
}
